--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <div id="footer-component"></div>
     
     <script src="scripts/main.js"></script>
+    <script src="scripts/chatbot.js"></script>
 </body>
 </html>
